--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </nav>
     </header>
     <h1>Hi mom</h1>
+    <h2>And dad</h2>
     <p>Lorem, ipsum dolor sit amet</p>
     <ul>
       <li>her er</li>
